--- a/maven.textile
+++ b/maven.textile
@@ -364,29 +364,45 @@ h3. Custom Archetypes
 ref: 
 "http://maven.apache.org/guides/mini/guide-creating-archetypes.html":http://maven.apache.org/guides/mini/guide-creating-archetypes.html
 
-Start creating your archetype with the following command:
+Change the groupId and artifactId to be what you want your archetype
+to be called.  Start creating your archetype with the following
+command:
+
+bc. mvn archetype:create -DgroupId=com.oracle.git -DartifactId=addTesting-archetype -DarchetypeArtifactId=maven-archetype-archetype
+
+Once you've created the sample edit the pom.xml at: 
 
 bc. 
-mvn archetype:create
-  -DgroupId=[your project's group id]
-  -DartifactId=[your project's artifact id]
-  -DarchetypeArtifactId=maven-archetype-archetype
+`-- src
+    `-- main
+        `-- resources
+            `-- archetype-resources
+                `--pom.xml
 
-Sample:
+it should be modified to look something like:
 
 bc. 
-mvn archetype:create -DgroupId=com.oracle.git -DartifactId=addTesting-archetype -DarchetypeArtifactId=maven-archetype-archetype
+$ cd addTesting-archetype;cat > src/main/resources/archetype-resources/pom.xml
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>${groupId}</groupId>
+  <artifactId>${artifactId}</artifactId>
+  <version>${version}-SNAPSHOT</version>
+</project>
 
+hit Ctrl-d to finish the @cat@ command.  Next run:
 
-bc. mvn archetype:create -DarchetypeGroupId=<archetype-groupId> -DarchetypeArtifactId=<archetype-artifactId> -DarchetypeVersion=<archetype-version> -DgroupId=<my.groupid> -DartifactId=<my-artifactId>
+bc. mvn install
 
-Sample one I created:
+Then you can build a new project based on this archetype by doing the
+following:
 
-bc. mvn archetype:create -DarchetypeGroupId=testArchetype -DarchetypeArtifactId=testArchetype -DarchetypeVersion=1.0 -DgroupId=testProject1 -DartifactId=testProject1
+bc. mvn archetype:generate -B -DarchetypeGroupId=com.oracle.git -DarchetypeArtifactId=addTesting-archetype -DarchetypeVersion=1.0-SNAPSHOT -Dversion=0.0.1 -DgroupId=com.acme -DartifactId=testProject -Dpackage=com.acme.testProject
 
-bc. mvn archetype:create -DarchetypeGroupId=com.oracle.git.archetypes -DarchetypeArtifactId=basic-archetype -DarchetypeVersion=0.0.1-SNAPSHOT -DgroupId=testProject1 -DartifactId=testProject2 -DpackageName=com.oracle
+More refs:
 
-"http://blogs.mikeci.com/2010/01/14/working-with-custom-maven-archetypes-part-1/":http://blogs.mikeci.com/2010/01/14/working-with-custom-maven-archetypes-part-1/
+* "http://blogs.mikeci.com/2010/01/14/working-with-custom-maven-archetypes-part-1/":http://blogs.mikeci.com/2010/01/14/working-with-custom-maven-archetypes-part-1/
 
 h2(#eclipsify). Eclips'ify
 
