--- a/jeos/virtualMachines.textile
+++ b/jeos/virtualMachines.textile
@@ -33,7 +33,7 @@ h5. Static IPs
 | vl-wciwcm1               | 10.179.252.35 |                                               | 
 | "alm":#alm               | 10.179.252.39 | OVMM, OVMTB, Hudson :dev                      |
 | youtube                  | 10.179.252.38 |                                               |
-| ipm                      | 10.179.252.41 |                                               |
+| "ipm":#ipm               | 10.179.252.41 | wls :dev                                      |
 | "vl-wcfs":#vl-wcfs       | 10.179.252.40 | glassfish :stage                              |
 | vl-urmses                | 10.179.252.42 |                                               |
 | vl-autovue               | 10.179.252.37 |                                               |
@@ -62,6 +62,12 @@ h3(#vl-vmsrv1). vl-vmsrv1 :stage
 | Virtual Machines | /OVS/running_pool/ |                |
 
 h2. Virtual Machines
+
+h3(#ipm). ipm - wls :dev
+
+h4. wls
+
+We want to move from glassfish to wls.  This is where we are testing that.
 
 h3(#linux1). linux1 - DNS, Git :stage
 
