--- a/training/database/oracle.textile
+++ b/training/database/oracle.textile
@@ -1,9 +1,27 @@
-"home":../../index.html > "training":../index.html > MySQL
-
-p(toc). Table of Contents
-
-{toc}
-
 h1. Basic Commands
 
 select * from user_objects where object_type = 'TABLE'; 
+
+String sql = "select table_name from all_tables";
+
+// Print out all the tables in the system.
+sql = "select TABLE_NAME from ALL_ALL_TABLES";
+//printStringColumnData(rs,3);
+
+//sql = "select * from dict";  // very good tells you about all objects
+// processDataMaxRows(rs, 1000);
+
+//sql = "select * from ALL_CATALOG where owner = 'MISSECURE'";
+//printStringColumnData(rs,3);
+
+sql = "select * from ALL_CATALOG";
+ResultSet rs = getProdResultSet(sql);
+printStringColumnData(rs,3,true,"selectStarFromAll_Catalog.txt");	
+
+
+Describe table structure
+
+bc. describe <table_name>
+
+
+
