--- a/training/oracleVM.textile
+++ b/training/oracleVM.textile
@@ -75,9 +75,13 @@ http://www.linuxhomenetworking.com/wiki/index.php/Quick_HOWTO_:_Ch27_:_Expanding
 
 bc. # fdisk /dev/xvdb
 
-You'll get some error messages saying you don't have a valid partition table. Create a new partition, 'n', primary = 'p', partition number = '1', default first and last cylinders.
+You'll get some error messages saying you don't have a valid partition
+table. Create a new partition, 'n', primary = 'p', partition number =
+'1', default first and last cylinders.
 
-List this partition table 'p' now and notice the Id type is 83 or something. Change this to 8e. 't', '8e'. List the partition table 'p', again, notice the new Id type is 8e. Save partition table 'w'.
+List this partition table 'p' now and notice the Id type is 83 or
+something. Change this to 8e. 't', '8e'. List the partition table 'p',
+again, notice the new Id type is 8e. Save partition table 'w'.
 
 * Create a physical volume from this device
 
@@ -108,6 +112,34 @@ bc. /dev/lvm-oracledb/lvm0 /oracledb ext3 defaults 1 2
 bc. # mount -a
 
 DONE!!!
+
+* Create a hot mounted ext3 disk
+
+On the VM server do:
+
+bc. 
+dd if=/dev/zero of=disk2.img bs=1M count=2048
+mkfs -t ext3 disk2.img
+xm block-attach <vmName> file:/OVS/running_pool/disks/disk2.img xvdb w
+
+Inside the vm do:
+
+bc. 
+mkdir /u02
+mount -t ext3 /dev/xvdb /u02
+
+To make the above persist for next reboot on vm server edit vm.cfg
+adding a line like:
+
+bc. 
+disk = ['file:/OVS/running_pool/db11g/System.img,xvda,w','file:/OVS/running_pool/disks/disk2.img,xvdb,w']
+
+On VM Guest edit /etc/fstab
+
+bc. /dev/xvdb		/u05			ext3	defaults	1 2
+
+
+
 
 * Remove a Disk (LVM)
 
